5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1575_1333.log
== TEST (2019-03-12 12:48:58) 
-- CODE:
expressao = 
print(30-3**2+8//3**2*10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:49:09) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(30-3**2+8//3**2*10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:49:11) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.170621
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
